--- a/flex/03-flex-header-2/index.html
+++ b/flex/03-flex-header-2/index.html
@@ -19,7 +19,7 @@
           <li><a href="https://google.com">link-three</a></li>
         </ul>
       </div>
-      <div class="icons">
+      <div class="right">
         <button class="notifications">
           1 new notification
         </button>
